Fix friends grid being too low.

--- a/src/ProfileCards/index.css
+++ b/src/ProfileCards/index.css
@@ -46,3 +46,7 @@
 .peopleColumn__133bf .avatar__0a06e::before {
     display: none;
 }
+
+.peopleColumn__133bf .peopleList__5ec2f {
+    margin-top: 50px;
+}
