--- a/src/compiled.css
+++ b/src/compiled.css
@@ -402,6 +402,10 @@
     display: none;
 }
 
+.peopleColumn__133bf .peopleList__5ec2f {
+    margin-top: 50px;
+}
+
 /* ╔════════════════════════════════════════════════════════════════════════════════════════════════════════[─]═[□]═[×]═╗ */
 /* ║ Discord Add-on                                                                                                     ║ */
 /* ╠══════════════════════════╦═════════════════════════════════════════════════════════════════════════════════════════╣ */
